# gaokao-vault-optimized

./: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  paseo.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  main.yml
docs/: architecture.md  cli.md  getting-started.md  review-baseline.md
scripts/: crawl_charters_once.py  crawl_enrollment_plans_once.py  crawl_interpretations_once.py  crawl_major_details_once.py  crawl_majors_once.py  crawl_school_majors_once.py  crawl_schools_once.py
src/gaokao_vault/: __init__.py  cli.py  config.py  constants.py
src/gaokao_vault/anti_detect/: __init__.py  proxy_pool.py  rate_limiter.py  ua_pool.py
src/gaokao_vault/db/: schema.sql  seed_provinces.sql  seed_subject_categories.sql
src/gaokao_vault/exporters/: __init__.py  liaoning.py
src/gaokao_vault/models/: __init__.py  admission.py  enrollment.py  major.py  source.py  special.py
src/gaokao_vault/pipeline/: batch_normalizer.py  dedup.py  quality.py  security.py  sink.py  validator.py
src/gaokao_vault/scheduler/: cron_runner.py  liaoning.py  orchestrator.py  reference_catalog.py
src/gaokao_vault/spiders/: __init__.py  base.py  charter_spider.py  dxsbb_admission_result_spider.py  dxsbb_score_segments.py  enrollment_plan_spider.py  interpretation_spider.py  major_admission_result_spider.py  major_satisfaction_spider.py  major_spider.py  major_strength_signal_spider.py  provincial_announcement_spider.py  school_major_spider.py  school_satisfaction_spider.py  school_spider.py  scope.py  score_line_spider.py  score_segment_spider.py  (+2 more)
tests/: test_admission_queries.py  test_agent_source_views.py  test_batch_normalizer.py  test_batch_sink.py  test_cli_crawl.py  test_cli_data_quality.py  test_config.py  test_crawl_meta_queries.py  test_crawl_scope.py  test_cron_runner.py  test_data_quality_queries.py  test_deploy_workflow.py  test_docker_build_secrets.py  test_dxsbb_admission_result_spider.py  test_enrollment_plan_spider.py  test_enrollment_queries.py  test_interpretation_spider.py  test_liaoning_cli.py  test_liaoning_export.py  test_liaoning_queries.py  test_liaoning_scheduler.py  test_major_admission_result_spider.py  test_major_queries.py  test_major_spider.py  test_major_strength_signal_spider.py  test_migrate.py  test_one_shot_runners.py  test_orchestrator_timeout.py  test_pipeline.py  test_preservation_properties.py  test_provincial_announcement_spider.py  test_proxy_pool.py  test_rate_limiter.py  test_recommendation_queries.py  test_reference_catalog.py  test_resource_lifecycle.py  test_s3_storage.py  test_schema_migrations.py  test_school_major_spider.py  test_school_queries.py  (+11 more)
tests/integration/: test_postgres_migrations.py
(+14 files in other folders)
